# lncpu

./: .gitignore  C8BComponents.circ  Computer8Bit.circ  Computer8Bit.docx  Devices.circ  Ordine.txt  find_missing_tests.py  make.bat  make.sh  readme.md
Control_Unit/: EEPROM0.eeprom  EEPROM0.raw  EEPROM1.eeprom  EEPROM1.raw  EEPROM2.eeprom  EEPROM2.raw  EEPROM3.eeprom  EEPROM3.raw  EEPROM4.eeprom  EEPROM4.raw  EEPROM5.eeprom  EEPROM5.raw  EEPROM6.eeprom  EEPROM6.raw  gen_eeproms.py  instructions.json  opcodes.tsv  signals.json  test.eeprom
Digital_Components/: BufferedRegister.dig  FLAGSController.dig
Documents/: Resistors.docx
Programs/: load_and_run.lnasm  test.lnasm  test.out
Schematics/: CustomComponents.lib  double_register_adder.txt  global.fzz  register.fzz
eeprom-serial-loader/: pom.xml  readme.md
lnasm/: gen_language_docs.py  instructionset.md  pom.xml  readme.md
lnc/: AGENTS.md  config.cfg  gen_language_docs.py  instructionset.md  pom.xml  readme.md  test.lnc
lncpu-emu/: CMakeLists.txt  cmdline.h  descriptions.tsv  emu.c  emu.h  emu_device.c  emu_device.h  gen_opcodes_h.py  main.c  opcodes.h  readme.md  signal_handler.c  signal_handler.h  test_emu.py  utlist.h  vm.c  vm.h
lncpu-emu/config/: argparse.c  argparse.h  cmdline.c  cmdline.h
lncpu-emu/linker_config/: lexer.c  lexer.h  link_target.c  link_target.h  linker_config.c  linker_config.h  linker_config_parser.c  linker_config_parser.h  location.h  parser.c  parser.h  token.h
tests/: aiprompt.txt  gen_ai_prompt.py  gen_ai_tests.py  gen_test_pass_from_code.py  linker.cfg  result.txt  revise_ai_tests.py  revised.txt  test.py  (+1 more)
(+1355 files in other folders)
